# dca-architecture

./: .gitignore  CMakeLists.txt  README.md  package-lock.json  package.json  tsconfig.json
docs/: architecture.txt  gpu.txt  instructions.txt  register.txt
include/: core.h  core.hpp
include/DcaCore/: core.hpp
src/: constants.ts  gpu.ts  index.ts  types.ts
ts-src/: constants.ts  index.ts  types.ts
